# all-by-all-aou-browser

./: .gitignore  .gitmodules  Makefile  README.md  deploy.sh
axaou-server/: .gcloudignore  .gitignore  Cargo.toml  Dockerfile  cloudbuild.yaml  loadtest.toml  phenotype-data.toml
axaou-server/loadtest-ui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
axaou-server/loadtest-ui/src/: App.tsx  index.css
axaou-server/loadtest-ui/src/components/: ConfigForm.tsx  EndpointLatencyChart.tsx  EndpointTable.tsx  ErrorLog.tsx  GcpMetricsPanel.tsx  LiveCharts.tsx  SummaryBar.tsx
axaou-server/loadtest-ui/src/hooks/: useLoadTestStream.ts
axaou-server/loadtest-ui/src/pages/: Dashboard.tsx  RunDetail.tsx  RunHistory.tsx
axaou-server/loadtest-ui/src/types/: index.ts
axaou-server/scripts/: smoke_test.sh
axaou-server/src/: analysis_assets.rs  api.rs  data.rs  error.rs  gene_models.rs  gene_queries.rs  main.rs  models.rs  phenotype_display_names.rs  response.rs
axaou-server/src/admin/: mod.rs  pipeline.rs
axaou-server/src/cli/: derive.rs  ingest.rs  mod.rs
axaou-server/src/clickhouse/: client.rs  mod.rs  models.rs  xpos.rs
axaou-server/src/genes/: mod.rs  routes.rs
axaou-server/src/loadtest/: api.rs  db.rs  mod.rs  runner.rs
axaou-server/src/phenotype/: loci.rs  manhattan.rs  mod.rs  overview.rs  phenotype_display_names.json  plots.rs  qq.rs  region_render.rs  render.rs  significant.rs  summary.rs
axaou-server/src/sql/: analysis_metadata.sql  analysis_metadata_transform.sql  exome_annotations.sql  exome_annotations_transform.sql  gene_associations_by_gene.sql  gene_associations_by_gene_populate.sql  gene_models.sql  gene_models_transform.sql  gene_summary.sql  gene_summary_populate.sql  genome_annotations.sql  genome_annotations_transform.sql  phenotype_summary.sql  phenotype_summary_populate.sql  top_variants_aggregated.sql  top_variants_aggregated_populate.sql
axaou-server/src/variants/: annotations.rs  associations.rs  mod.rs  phewas.rs
frontend/: Dockerfile  README.md  build.sh  package.json  pnpm-lock.yaml  start-python.sh  start.sh  tsconfig.json  update-deployment.sh  webpack.config.client.js  webpack.config.server.js
frontend/src/client/: About.tsx  AnalysisControls.tsx  App.css  App.tsx  Debug.tsx  Downloads.tsx  ExportDataButton.tsx  FAQ.tsx  GeneNotInAnalysis.tsx  HomePage.tsx  Link.tsx  Login.tsx  Logos.tsx  Logout.tsx  Main.tsx  MarkdownContent.tsx  NavButtons.tsx  PageHeading.tsx  PageNotFoundPage.tsx  (+23 more)
infra/clickhouse-vm/: README.md  axaou-clickhouse-1.tf  clickhouse-vm.tf  main.tf  outputs.tf  startup.sh
infra/cloud-run/: .gitignore  README.md  apis.tf  backend.tf  deploy-sa.tf  frontend.tf  iam.tf  main.tf  outputs.tf  registry.tf  variables.tf
scripts/: bench-cold-start.sh  dev.sh  plot-cold-start.py
(+189 files in other folders)
