[package]
name = "axaou-server"
version = "0.1.0"
edition = "2021"
description = "Rust server for AxAoU analysis metadata"

[dependencies]
# Web server
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }

# Serialization / Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging & Error Handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"

# Hail Data Access
hail-decoder = { path = "../../../idk/hail-decoder" }
