[package]
name = "axaou-server"
version = "0.1.0"
edition = "2021"
description = "Rust server for AxAoU analysis metadata"

[dependencies]
# ClickHouse client (native-tls avoids ring crate QEMU issues during cross-compilation)
clickhouse = { version = "0.13", features = ["native-tls"] }

# Web server
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "compression-gzip"] }

# Serialization / Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Caching
moka = { version = "0.12", features = ["future"] }

# Logging & Error Handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"

# Cloud Storage (for GCS listing/discovery)
object_store = { version = "0.11", features = ["gcp"] }
url = "2.5"
futures = "0.3"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Random sampling
rand = "0.9"

# Hail Data Access
# For local dev: genohype-core = { path = "../../genohype/core", features = ["genomic"] }
genohype-core = { git = "https://github.com/broadinstitute/genohype.git", features = ["genomic"] }

# Unix resource limits
rlimit = "0.10"
